﻿IMPROVEMENTS / FIXES
- UI:
	- Fix the alternate (hidden UI) window locations (for scores and vessel switcher) not being saved correctly.
	- Add a max distance threshold setting to Team Icons.
- AI / WM:
	- Add new Orbital AI part for spacecraft in orbit:
		- The Orbital AI will use orbital maneuvers to close within gun range of the target to fire weapons. It will also automatically fire missiles when able.
		- The AI will maneuver at the Maneuver Speed setting and once within gun range try to fire guns while at the Strafe Speed setting. It will evade missiles based on the countermeasure settings on the Weapons Manager and evade gunfire using AI settings similar to those on the Pilot AI.
		- When spawned at orbital altitudes using the BDA Vessel Spawner, craft with the Orbital AI will be automatically spawned into orbit (other options for orbital spawning are cheat menu and HyperEdit mod).
		- Orbital AI is adapted from the StockCombatAI (KCS) mod, check it out here https://github.com/Halbann/StockCombatAI/releases!
	- Base the Immelmann turn pitch direction on the local pitch angular velocity (i.e., pitch down if already rotating that way — fixes the pitch oscillation behaviour when targeting an opponent behind the craft while inverted near terrain).
	- Don't summon the NaN-Kraken when the post-terrain avoidance cool-down is 0.
	- Perform banked turns when the target is behind us at long range and extending is allowed instead of Immelmann turns or turning directly to target. Threshold is clamp(8 * max speed, 1000, 4000).
	- Pilot AI turns will now turn harder (using Max AoA setting) towards the notch direction the closer the missile is to impact.
	- Factor the user-defined steer limit into the turn radius calculations.
	- Use a more gentle take-off slope for the initial take-off.
	- Add an Evasion Min Range Threshold option to only trigger evasion from an attacker using guns when they're beyond that distance.