@@ -63,7 +63,7 @@ MODULE
 
 	audioClipPath = BDArmory/Sounds/jet
 	guidanceActive = true //missile has guidanceActive
-	homingType = RCS
+	homingType = orbital  // Replaces homingType = RCS
 	targetingType = radar
 	missileType = missile
 	DetonationDistance = 1
